k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: homepage
  labels:
    app.kubernetes.io/name: homepage
spec:
  type: ClusterIP
  # pr la demo (HPA actif avec 5 pods), a retirer en prod si on passe a 1 replica
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 3600
  selector:
    app.kubernetes.io/name: homepage
  ports:
    - name: http
      port: 3000
      targetPort: 3000
